removed height on .card-front img to make it display correctly on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,13 +264,6 @@ html {
 
 }
 
-
-@-moz-document url-prefix() { 
-      .card-front img {
-         width:80%;
-            }
-  }
-
 /*------Game Rules Modal---------*/
 .modal {
   display: none;
